fix of trick card alignment with angular-masonry

--- a/public/css/elements.css
+++ b/public/css/elements.css
@@ -1,9 +1,20 @@
+.wrapword {
+white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
+white-space: -webkit-pre-wrap; /*Chrome & Safari */ 
+white-space: -pre-wrap;      /* Opera 4-6 */
+white-space: -o-pre-wrap;    /* Opera 7 */
+white-space: pre-wrap;       /* css-3 */
+word-wrap: break-word;       /* Internet Explorer 5.5+ */
+word-break: break-all;
+white-space: normal;
+}
+
 @media only screen and (max-device-width: 480px) .trick-card {
-  width: 50%;
+  /*width: 50%;*/
 }
 
 .trick-card {
-  width: 33.33%;
+  width: 33.3%;
 }
 
 .footer {
